Updated my portfolio

--- a/index.html
+++ b/index.html
@@ -113,12 +113,13 @@
                      </span>
                   </div>
                   <p>
-                     A two-time founder and a passionate Software developer with a keen eye for crafting efficient Software solutions. 
-                     My journey in the world of coding began with a fascination for how the back end and front 
-                     end of websites functioned. I thrive on dissecting complex problems, finding elegant solutions, 
-                     and implementing them in a way that enhances the user experience. I understand the importance of 
-                     working within a team and I'm always open to collaborations and conversations about the 
-                     fascinating world of software development. Feel free to reach out to me.
+                     A two-time founder and a passionate Software developer turned Product Manager with a keen eye for 
+                     building efficient product solutions and making customers awesome. journey began in the world of 
+                     coding with a fascination for how the back end and front end of websites functioned. As a Technical 
+                     Product Manager, I thrive on managing people and processes, creating simple and efficient features, 
+                     dissecting complex problems, finding elegant solutions, and helping the implement them in a way that 
+                     enhances the user experience. I understand the importance of working closly within a team and I'm always 
+                     open to collaborations conversations about the fascinating world of product development. Feel free to reach out to me.
                   </p>
                </div>
             </div>
@@ -133,7 +134,8 @@
                <div class="column left">
                   <div class="text">My creative skills & experiences</div>
                   <p>
-                     Languages: Proficient in Java, Python, and Javascript, with a focus on Java and Python for back-end development. Front End: Html, Tailwind CSS and React, NextJs and JavaScript.<br>
+                     Tools: Conversant with Atlassian products like Jira (for setting up tasks and tracking progress) and Confluence (for documentations like Product Requirement Documents (PRDs)), Lark platform for managing files and team collaborations.
+                     <br>Languages: Proficient in Java, Python, and Javascript, with a focus on Java and Python for back-end development. Front End: Html, Tailwind CSS and React.Js, NextJs and JavaScript.<br>
                      Frameworks: Experienced in Spring and SpringBoot, Django, Flask, Nodejs, leveraging them to build scalable and maintainable applications. <br>
                      Databases: Skilled in designing and optimizing databases using MySQL or MongoDB to ensure seamless data management, I am also Skilled in Data Analytics.
                   </p>
@@ -190,11 +192,38 @@
             <h2 class="title fadein">My Projects</h2>
             <div class="carousel owl-carousel">
                <div class="card">
+                  <a href="https://www.tranxactrust.com" target="_blank">
+                     <div class="box">
+                        <img src="./images/Tranxactrust-react.png" alt="Tranxactrust Payment Application">
+                        <p>Tranxactrust Payment Application</p>
+                        <p>Java, Spring Boot, React.JS, TailwindCSS, MySQL</p>
+                     </div>
+                  </a>
+               </div>
+               <div class="card">
+                  <a href="https://aho-mansions.vercel.app/" target="_blank">
+                     <div class="box">
+                        <img src="./images/AHO Mansions.png" alt="aho-mansions">
+                        <p>Real Estate Application For Investors</p>
+                        <p>NextJs, Tailwind CSS, MongoDB</p>
+                     </div>
+                  </a>
+               </div>
+               <div class="card">
+                  <a href="https://dcvi-cms.vercel.app" target="_blank">
+                     <div class="box">
+                        <img src="./images/DCVI.png" alt="Contact Application">
+                        <p>Cell Management Application For Churches</p>
+                        <p>Angular, C#, Azure API</p>
+                     </div>
+                  </a>
+               </div>
+               <div class="card">
                   <a href="https://github.com/HarryNwa/Celebzone-React" target="_blank">
                      <div class="box">
                         <img src="./images/profile.png" alt="Contact Application">
                         <p>Contact Application Profile Outlook</p>
-                        <p>Java, Maven, SpringBoot</p>
+                        <p>Java, Maven, SpringBoot, React.js, MySQL</p>
                      </div>
                   </a>
                </div>
@@ -207,15 +236,7 @@
                      </div>
                   </a>
                </div>
-               <div class="card">
-                  <a href="https://github.com/HarryNwa/Tranxactrust_react" target="_blank">
-                     <div class="box">
-                        <img src="./images/Tranxactrust-react.png" alt="Tranxactrust Payment Application">
-                        <p>Tranxactrust Payment Application Frontend</p>
-                        <p>React, CSS, HTML</p>
-                     </div>
-                  </a>
-               </div>
+               
                <div class="card">
                   <a href="https://github.com/HarryNwa/pythonProject/tree/main/PycharmProjects/pythonProject/Diary_App" target="_blank">
                      <div class="box">
