Updated with AScholar project

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <h2 class="title fadein">My Projects</h2>
             <div class="carousel owl-carousel">
                <div class="card">
-                  <a href="https://www.tranxactrust.com" target="_blank">
+                  <a href="https://use-tranxactrust.vercel.app/" target="_blank">
                      <div class="box">
                         <img src="./images/Tranxactrust-react.png" alt="Tranxactrust Payment Application">
                         <p>Tranxactrust Payment Application</p>
@@ -228,11 +228,11 @@
                   </a>
                </div>
                <div class="card">
-                  <a href="https://github.com/HarryNwa/Nexcent" target="_blank">
+                  <a href="https://github.com/HarryNwa/ascholar-logicend" target="_blank">
                      <div class="box">
                         <img src="./images/Nexcent.png" alt="Cardio Exercise Application">
-                        <p>Nexcent Application landing page</p>
-                        <p>Html5, Css</p>
+                        <p>AScholar Application: For students & Universities </p>
+                        <p>Java, Spring Boot</p>
                      </div>
                   </a>
                </div>
