Updated with AScholar project

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                <div class="card">
                   <a href="https://github.com/HarryNwa/ascholar-logicend" target="_blank">
                      <div class="box">
-                        <img src="./images/Nexcent.png" alt="Cardio Exercise Application">
+                        <img src="./images/AScholar logo.png" alt="Cardio Exercise Application">
                         <p>AScholar Application: For students & Universities </p>
                         <p>Java, Spring Boot</p>
                      </div>
